# coding-challenge

./: .gitignore
performance/: .gitignore  pyproject.toml  requirements.txt
performance/performance/: benchmark.md  duck.py  main.py  naive.py  pandas_v2.py  polars_rs.py  process_file.py
