[tool.poetry]
name = "performance"
version = "0.0.1"
description = ""
authors = ["Shaurya Rawat <shauryarawat241994@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
pandas = "^2.2.1"
polars = "^0.20.18"
duckdb = "^0.10.1"
dask = {extras = ["dataframe"], version = "^2024.4.1"}


[tool.poetry.group.dev.dependencies]
snakeviz = "^2.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
